SVN Update# 1989 by JPEXS: Bagruj.cz plugin fix to version 2.0.0 - Forced redirection to Uloz.to